# bbLean

./: .gitignore  CMakeLists.txt  README.md  blackbox.rc  extensions.rc  makefile  shellfolders.rc  todo.txt
_/: apiExports.txt  bbhacks_remove.txt  m.txt  m_common.txt  todo.txt
bblib/: CMakeLists.txt  bbrc.c  bbroot.c  makefile  strings.c
blackbox/: BB.h  BBApi.cpp  BBApi.h  BBRoot.cpp  BBSendData.h  BBVWM.cpp  BBVWM.h  BImage.cpp  BImage.h  Blackbox.cpp  CMakeLists.txt  ConfigMenu.cpp  Desk.cpp  Desk.h  DesktopMenu.cpp  MessageManager.cpp  MessageManager.h  PluginManager.cpp  PluginManager.h  Settings.cpp  Settings.h  Stylestruct.h  Toolbar.cpp  Toolbar.h  Tray.cpp  Tray.h  Utils.cpp  Workspaces.cpp  Workspaces.h  bbversion.h  makefile  resource.rc  win0x500.h
blackbox/Hooks/: CMakeLists.txt  deskhook.cpp  makefile  readme.txt  trayhook.cpp
blackbox/Menu/: CommandItem.cpp  Contextmenu.cpp  Dragsource.cpp  Droptarget.cpp  FolderItem.cpp  Menu.cpp  Menu.h  MenuItem.cpp  MenuMaker.cpp  MenuMaker.h  SpecialFolder.cpp  TitleItem.cpp
cmake/: AddTargetCopyFiles.cmake
data/: menu.rc  plugins.rc  stickywindows.ini
data/fonts/: CMakeLists.txt  README.TXT
docs/: CMakeLists.txt  bblean.txt  makefile
fonts/: makefile
fonts/artwiz-latin1-1.0-src/: anorexia.bdf  glisp.bdf  kates.bdf  lime.bdf  mints-mild.bdf  mints-strong.bdf  nu.bdf  snap.bdf
lib/: CMakeLists.txt  bblib.h  bbrc.c  bbrc.h  bbroot.c  bbroot.h  bbshell.h  bools.c  colors.c  m_alloc.c  numbers.c  paths.c  pidl.c  strings.c  tinylist.c  tokenize.c  winutils.c
plugins/bbAnalog/: CMakeLists.txt  bbAnalog.cpp  makefile  readme.txt
plugins/bbColor3dc/: CMakeLists.txt  bbColor3dc.cpp  makefile
plugins/bbIconBox/: CMakeLists.txt  DropTarget.cpp  LoadFolder.cpp  Utils.cpp  bbIconBox.cpp  bbIconBox.h  bbIconBox.rc  makefile  readme.txt  resource.rc  winlist.cpp
plugins/bbKeys/: CMakeLists.txt  bbKeys.cpp  bbKeys.rc  makefile
plugins/bbLeanBar/: BuffBmp.cpp  CMakeLists.txt  TinyDropTarg.cpp  bbLeanBar.cpp  bbLeanClasses.cpp  makefile
plugins/bbLeanSkin/: CMakeLists.txt  bbLeanSkin.cpp  bbLeanSkinRun32.cpp  makefile
plugins/bbLeanSkin/engine/: hookctl.cpp  hookinfo.h  subclass.cpp  subclass.h
plugins/bbPlugin/: CMakeLists.txt  bbPlugin.cpp  bbPlugin.h  drawico.cpp  drawico.h  sysmenu.cpp  tooltips.cpp  tooltips.h
plugins/bbSDK/: CMakeLists.txt  bbSDK.cbp  bbSDK.cpp  bbSDK.vcproj  makefile-gcc  makefile-msc  readme.txt
plugins/bbSlit/: CMakeLists.txt  bbSlit.cpp  bbSlit.rc  makefile
plugins/bbWorkspaceWheel/: CMakeLists.txt  bbWorkspaceWheel.cpp  makefile
src/bbcore/: BB.h  BBRootImage.cpp  BBRootImage.h  BBSendData.h  BBVWM.cpp  BBVWM.h  BImage.cpp  BImage.h  Blackbox.cpp  Blackbox.exports.cpp  Blackbox.h  CMakeLists.txt  Desk.cpp  Desk.h  MessageManager.cpp  MessageManager.h  PluginManager.cpp  PluginManager.h  Settings.cpp  Settings.h  SettingsBbox.cpp  SettingsBbox.h  Stylestruct.h  Toolbar.cpp  Toolbar.h  Tray.cpp  Tray.h  Utils.cpp  Utils.h  Workspaces.cpp  Workspaces.h  application.cpp  application.h  bbcore.cpp  bbcore.h  commands.cpp  commands.h  nls.cpp  nls.h  parse.cpp  (+6 more)
src/bbcore/Menu/: Dragsource.cpp  Dragsource.h  Droptarget.cpp  Droptarget.h  MenuInfo.h  MenuMaker.cpp  MenuMaker.h  ShellContext.cpp  ShellContext.h
src/bbcore/Menu/items/: CommandItem.cpp  CommandItem.h  ContextItem.cpp  ContextItem.h  FolderItem.cpp  FolderItem.h  IntegerItem.cpp  IntegerItem.h  MenuItem.cpp  MenuItem.h  SFInsertItem.cpp  SFInsertItem.h  SeparatorItem.cpp  SeparatorItem.h  SpecialFolderItem.cpp  SpecialFolderItem.h  StringItem.cpp  StringItem.h  TitleItem.cpp  TitleItem.h
src/bbcore/Menu/menus/: ConfigMenu.cpp  ConfigMenu.h  Contextmenu.cpp  Contextmenu.h  DesktopMenu.cpp  DesktopMenu.h  Menu.cpp  Menu.h  SpecialFolderMenu.cpp  SpecialFolderMenu.h
src/bblib/: CMakeLists.txt  bblib.h  bbrc.cpp  bbrc.h  bbroot.cpp  bbroot.h  bbshell.h  bbstyle.h  colors.c  drawico.cpp  drawico.h  m_alloc.cpp  paths.cpp  pidl.cpp  strings.cpp  tinylist.cpp  tokenize.c  tokenize.cpp  winutils.cpp
src/blackbox/: BBApi.cpp  BBApi.h  BBRoot.cpp  (+21 more)
src/plugins/bbKeys/: CMakeLists.txt  bbKeys.cpp
src/plugins/skinSupport/bbLeanSkin/: CMakeLists.txt  bbLeanSkin.cpp
src/plugins/skinSupport/bbLeanSkinEng/: CMakeLists.txt  exclusions.rc  hookctl.cpp  subclass.cpp
src/tests/test_bbcore/: CMakeLists.txt  test_core.cpp
src/tools/bbnote/app/: CMakeLists.txt  bbapi-small.cpp  bbnote.cpp  edfiles.cpp  edfunc.cpp  edprint.cpp  edproc.cpp  match3.cpp  readstyle.cpp  resource.rc
src/tools/bbstylemaker/: CMakeLists.txt  bbdialog.cpp  bbdialog.h  bbstylemaker.h  bbstylemaker.txt  main.cpp  rcfile.cpp  readroot.cpp  snap.cpp  snap.h  tokens.inl  utils.cpp  writestyle.cpp  writestyle.h
src/tools/bbstylemaker/helpers/: utils.cpp  utils.h
src/tools/fonttools/bdf2fnt/: CMakeLists.txt
src/tools/fuzzydoc/: CMakeLists.txt  fuzzydoc.c  tpl_frame_body.htm  tpl_simple.htm
tests/test_bblib/: CMakeLists.txt  test_core.cpp
tools/bbnote/: CMakeLists.txt  bbapi-small.cpp  bbnote-proxy.cpp  bbnote.cpp  bbnote.txt  bbstyle.h  eddef.h  edfiles.cpp  edfunc.cpp  edprint.cpp  edstruct.h  makefile  match3.cpp  readstyle.cpp
tools/bbnote/app/: bbapi-small.cpp  bbnote.htm
tools/bbnote/proxylib/: bbnote-proxy.cpp
tools/bsetroot/: CMakeLists.txt  bblean_style.css  bsetbg.cpp  bsetroot.cpp  bsetroot.rc  bsetroot.txt  bsrt-rsc.rc  image_cx.cpp  makefile
tools/bsetroot/CXIMAGE/: CMakeLists.txt  readme.txt
tools/bsetroot/CXIMAGE/CxImage/: ximabmp.cpp  ximabmp.h  ximadefs.h  ximaenc.cpp  ximaexif.cpp  ximage-original.h  ximage.h  ximagif.cpp  ximagif.h  ximaico.cpp  ximaico.h  ximaiter.h  ximaj2k.h  ximajpg.cpp  ximajpg.h  ximamng.cpp  ximamng.h  ximapal.cpp  ximapng.cpp  ximatga.cpp  ximatga.h  ximatif.h  ximatran.cpp  ximawbmp.h  ximawnd.cpp
tools/bsetroot/CXIMAGE/jpeg/: jdhuff.c  jdmainct.c
tools/bsetroot/CXIMAGE/png/: pngrutil.c
tools/bsetroot/CXIMAGE/zlib/: adler32.c  infcodes.c  inflate.c  inftrees.c  trees.c
tools/bsetroot/FreeImage/: readme.txt
tools/bsetshell/: CMakeLists.txt  bsetshell.cpp  makefile  resource.rc
(+162 files in other folders)
